syntax = "proto3";

package agent;

// QANData represents sent QAN data.
message QANData {
  // Row describes a single row of QAN data.
  message Row {
    // TODO
    string digest = 1;
    string digest_text = 2;
  }
  repeated Row rows = 1;
}
